Fixed bug: project image overlapped with nav bar on mouseover

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -24,9 +24,7 @@
 }
 
 .projectSection .project-container .project img:hover {
-    opacity: 0.5;
-    /*width: 99%;
-    border: 3px solid var(--color-accent-dark); */
+    padding: 1px;
 }
 
 .projectSection .project-container .project .content {
@@ -52,7 +50,8 @@
     width: 10%;
     height: auto;
     object-fit: cover;
-    margin-top: 2.5vh;
+    margin-top: 3.5vh;
+    margin-left: 5px;
 }
 
 .tag {
